# spel-katalog

./: Cargo.toml  LICENSE-MIT  README.md  build.rs  clippy.toml  deny.toml  justfile  lua_api.md  spel-katalog.lua  todo.md
lua/: .luarc.json  docs.md  docs.yml  luarc.template.json  sample.lua  spel-katalog.lua
spel-katalog/: Cargo.toml  README.md  build.rs
spel-katalog-batch/: Cargo.toml
spel-katalog-batch/src/: lib.rs  lua_api.rs  sample.zsh
spel-katalog-batch/src/lua_api/: cmd.rs  color.rs  fs.rs  image.rs  print.rs
spel-katalog-build/: Cargo.toml
spel-katalog-build/src/: expr.rs  format.rs  item.rs  lib.rs  settings.rs  string.rs
spel-katalog-cli/: Cargo.toml
spel-katalog-cli/src/: batch.rs  completions.rs  init_config.rs  lib.rs  run.rs  skeleton.rs  subcmd.rs
spel-katalog-common/: Cargo.toml
spel-katalog-common/src/: in_place.rs  lazy.rs  lib.rs  or_request.rs  or_status.rs  status_sender.rs  styling.rs  t.rs  w.rs
spel-katalog-daemon/: Cargo.toml
spel-katalog-daemon/src/: lib.rs  main.rs
spel-katalog-db/: Cargo.toml
spel-katalog-db/src/: connection.rs  db_path.rs  error.rs  lib.rs
spel-katalog-formats/: Cargo.toml
spel-katalog-formats/src/: addititional_config.rs  bind.rs  game.rs  image.rs  lib.rs  lutris_game.rs  native_game.rs  timestamp.rs
spel-katalog-games/: Cargo.toml
spel-katalog-games/src/: game.rs  games.rs  lib.rs  runner.rs  state.rs
spel-katalog-gather/: Cargo.toml
spel-katalog-gather/src/: lib.rs  load_covers.rs  load_game_db.rs  load_thumbnail_db.rs
spel-katalog-info/: Cargo.toml
spel-katalog-info/src/: attrs.rs  formats.rs  image_buffer.rs  lib.rs  native_info.rs  y.rs
spel-katalog-install/: Cargo.toml
spel-katalog-install/src/: lib.rs  main.rs
spel-katalog-installer/: Cargo.toml
spel-katalog-installer/src/: editor.rs  lib.rs  prepare.rs
spel-katalog-lua/: Cargo.toml
spel-katalog-lua-docs/: Cargo.toml
spel-katalog-lua-docs/src/: lib.rs  simple.rs  span_ext.rs  state.rs  table.rs
spel-katalog-lua/src/: cmd.rs  color.rs  dialog.rs  fs.rs  game_data.rs  image.rs  lib.rs  lua_result.rs  misc.rs  path.rs  print.rs  yaml.rs
spel-katalog-native/: Cargo.toml
spel-katalog-native/src/: lib.rs
spel-katalog-parse/: Cargo.toml
spel-katalog-parse/examples/: cmdline-format.rs
spel-katalog-parse/src/: lib.rs
spel-katalog-reflect/: Cargo.toml
spel-katalog-reflect/derive/: Cargo.toml
spel-katalog-reflect/derive-lib/: Cargo.toml
spel-katalog-reflect/derive-lib/src/: as_str.rs  cycle.rs  delta.rs  ext.rs  fields.rs  from_str.rs  get.rs  intermediate.rs  into_fields.rs  lib.rs  narrow.rs  option_default.rs  proxy.rs  soft_err.rs  variants.rs
spel-katalog-reflect/derive/src/: lib.rs
spel-katalog-reflect/src/: delta.rs  lib.rs
spel-katalog-run/: Cargo.toml
spel-katalog-run/src/: lib.rs  macros.rs  run_umu.rs  strerror.rs
spel-katalog-script/: Cargo.toml
spel-katalog-script/src/: builder_push.rs  dependency.rs  environment.rs  exec.rs  lib.rs  maybe_single.rs  script.rs  script_file.rs  string_visitor.rs
spel-katalog-script/src/dependency/: failure.rs  matches.rs
spel-katalog-settings/: Cargo.toml  build.rs
spel-katalog-settings/src/: environment.rs  lib.rs  list.rs  settings.toml
spel-katalog-sink/: Cargo.toml
spel-katalog-terminal/: Cargo.toml
spel-katalog-terminal/src/: ansi_cleanup.rs  lib.rs  line_channel.rs  line_pipe.rs  sink_builder.rs  tui.rs
spel-katalog-test/: Cargo.toml
spel-katalog-test/src/: match_num.rs
spel-katalog-tracker/: Cargo.toml
spel-katalog-tui/: Cargo.toml
spel-katalog-widget/: Cargo.toml
spel-katalog-widget/src/: lib.rs  list_menu.rs  rule.rs  scrollable.rs  vertical_list_menu.rs
spel-katalog/cli/: Cargo.toml
spel-katalog/cli/src/: batch.rs  completions.rs  init_config.rs  install_game.rs  lib.rs  run.rs  skeleton.rs  subcmd.rs
spel-katalog/common/src/: lib.rs  or_request.rs
spel-katalog/formats/: Cargo.toml
spel-katalog/formats/src/: bind.rs  daemon.rs  image.rs  installer.rs  lib.rs  lutris_config.rs  lutris_game.rs  native_game.rs
spel-katalog/games/: Cargo.toml
spel-katalog/games/src/: games.rs  state.rs
spel-katalog/gather/: Cargo.toml
spel-katalog/gather/src/: lib.rs
spel-katalog/info/: Cargo.toml
spel-katalog/info/src/: lib.rs  native_info.rs  native_table.rs
spel-katalog/installer/: Cargo.toml
spel-katalog/installer/src/: editor.rs  lib.rs  prepare.rs
spel-katalog/ipc/: Cargo.toml
spel-katalog/ipc/src/: http.rs  lib.rs  listen.rs  send.rs
spel-katalog/lazy/: Cargo.toml
spel-katalog/log/: Cargo.toml
spel-katalog/log/src/: lib.rs
spel-katalog/native/: Cargo.toml
spel-katalog/native/src/: lib.rs
spel-katalog/profiler/: Cargo.toml
spel-katalog/profiler/src/: lib.rs
spel-katalog/run/: Cargo.toml
spel-katalog/run/src/: lib.rs  run_umu.rs
spel-katalog/settings/: Cargo.toml  build.rs
spel-katalog/settings/derive/: Cargo.toml
spel-katalog/settings/derive-lib/: Cargo.toml
spel-katalog/settings/derive-lib/src/: derive_static_trait.rs  lib.rs  util.rs  variants.rs
spel-katalog/settings/derive/src/: lib.rs
spel-katalog/settings/src/: environment.rs  lib.rs  list.rs  settings.toml
spel-katalog/settings/traits/: Cargo.toml
spel-katalog/settings/traits/src/: lib.rs
spel-katalog/settings/view/: Cargo.toml
spel-katalog/settings/view/src/: lib.rs  list.rs
spel-katalog/sink/: Cargo.toml
spel-katalog/sink/src/: builder.rs  identity.rs  lib.rs  writer.rs
spel-katalog/src/: api_window.rs  app.rs  cli.rs  dialog.rs  exit_channel.rs  games.rs  image_buffer.rs  info.rs  init_config.rs  lazy.rs  lib.rs  main.rs  message.rs  oneshot_broadcast.rs  process_info.rs  run_game.rs  settings.rs  settings.toml  subscription.rs  update.rs  view.rs  y.rs
spel-katalog/src/games/: games.rs
spel-katalog/src/run_game/: macros.rs  run_script.rs  run_umu.rs  strerror.rs
spel-katalog/src/settings/: list.rs
spel-katalog/terminal/src/: lib.rs
spel-katalog/widget/src/: lib.rs
src/: games.rs  image_buffer.rs  info.rs  lib.rs  main.rs  settings.rs  t.rs  view.rs  w.rs  y.rs
test/: Cargo.toml
(+8 files in other folders)
