[workspace]
members = [
	"spel-katalog",
	"spel-katalog-batch",
	"spel-katalog-build",
	"spel-katalog-common",
	"spel-katalog-games",
	"spel-katalog-info",
	"spel-katalog-lua",
	"spel-katalog-settings",
	"spel-katalog-sink",
	"spel-katalog-terminal",
	"spel-katalog-test",
]
resolver = "2"
default-members = ["spel-katalog"]

[profile.release]
strip = "debuginfo"
opt-level = "z"
lto = "fat"
codegen-units = 1
panic = "abort"

[profile.dev]
opt-level = 1

[profile.dev.package."*"]
opt-level = 3

[workspace.lints.rust]
missing_docs = "warn"
missing_debug_implementations = "warn"

[workspace.lints.clippy]
allow_attributes = "warn"
missing_docs_in_private_items = "warn"
missing_errors_doc = "warn"
missing_panics_doc = "warn"
missing_safety_doc = "warn"
future_not_send = "warn"
missing_const_for_fn = "warn"

[workspace.dependencies]
async-stream = "0.3.6"
bon = "3.6.3"
clap = "4.5.39"
clap_complete = "4.5.54"
color-eyre = "0.6.5"
convert_case = "0.8.0"
derive-new = "0.7.0"
derive_more = "2.0.1"
either = "1.15.0"
env_logger = "0.11.8"
futures = "0.3.31"
iced = "0.13.1"
iced_highlighter = "0.13.0"
image = "0.25.8"
indexmap = "2.9.0"
itertools = "0.14.0"
log = "0.4.27"
memchr = "2.7.6"
mlua = "0.11.3"
nalgebra = "0.34.1"
nom = "8.0.0"
nom_locate = "5.0.0"
once_cell = "1.21.3"
open = "5.3.2"
parking_lot = "0.12.4"
paste = "1.0.15"
pretty_assertions = "1.4.1"
prettyplease = "0.2.33"
proc-macro2 = { version = "1.0.95", default-features = false }
quote = { version = "1.0.40", default-features = false }
rand = "0.9.2"
ratatui = "0.29.0"
rayon = "1.10.0"
regex = "1.11.1"
rfd = { version = "0.15.3", default-features = false }
rmp = "0.8.14"
rusqlite = "0.36.0"
rustc-hash = "2.1.1"
rustix = "1.0.7"
serde = "1.0.219"
serde_json = "1.0.140"
shell-words = "1.1.0"
smallvec = "1.15.1"
spel-katalog-batch = { path = "spel-katalog-batch" }
spel-katalog-build = { path = "spel-katalog-build" }
spel-katalog-common = { path = "spel-katalog-common" }
spel-katalog-games = { path = "spel-katalog-games" }
spel-katalog-info = { path = "spel-katalog-info" }
spel-katalog-lua = { path = "spel-katalog-lua" }
spel-katalog-settings = { path = "spel-katalog-settings" }
spel-katalog-sink = { path = "spel-katalog-sink" }
spel-katalog-terminal = { path = "spel-katalog-terminal" }
strsim = "0.11.1"
strum = "0.27.1"
syn = { version = "2.0.101", default-features = false }
tap = "1.0.1"
thiserror = "2.0.12"
tokio = { version = "1.45.1" }
tokio-stream = { version = "0.1.17" }
toml = "0.8.22"
vte = "0.15.0"
whoami = { version = "1.6.0", default-features = false }
xdg = "3.0.0"
yaml-rust2 = "0.10.3"
