[workspace]
members = [
	"spel-katalog",
	"spel-katalog-batch",
	"spel-katalog-build",
	"spel-katalog-cli",
	"spel-katalog-common",
	"spel-katalog-formats",
	"spel-katalog-games", "spel-katalog-gather",
	"spel-katalog-info",
	"spel-katalog-lua",
	"spel-katalog-settings",
	"spel-katalog-sink",
	"spel-katalog-terminal",
	"spel-katalog-test",
	"spel-katalog-tracker",
	"spel-katalog-tui",
]
resolver = "2"
default-members = ["spel-katalog"]

[profile.release]
strip = "debuginfo"
opt-level = "z"
lto = "fat"
codegen-units = 1
panic = "abort"

[profile.dev]
opt-level = 1

[profile.dev.package."*"]
opt-level = 3

[workspace.lints.rust]
missing_docs = "warn"
missing_debug_implementations = "warn"

[workspace.lints.clippy]
allow_attributes = "warn"
missing_docs_in_private_items = "warn"
missing_errors_doc = "warn"
missing_panics_doc = "warn"
missing_safety_doc = "warn"
future_not_send = "warn"
missing_const_for_fn = "warn"

[workspace.dependencies]
bytes = "1.10.1"
clap = "4.5.50"
clap_complete = "4.5.59"
color-eyre = "0.6.5"
convert_case = "0.8.0"
derive-new = "0.7.0"
derive_more = "2.0.1"
either = "1.15.0"
env_logger = "0.11.8"
iced = "0.13.1"
iced_highlighter = "0.13.0"
image = "0.25.8"
indexmap = "2.12.0"
itertools = "0.14.0"
log = "0.4.28"
memchr = "2.7.6"
mlua = "0.11.4"
nalgebra = "0.34.1"
once_cell = "1.21.3"
open = "5.3.2"
parking_lot = "0.12.5"
paste = "1.0.15"
pretty_assertions = "1.4.1"
prettyplease = "0.2.37"
proc-macro2 = { version = "1.0.103", default-features = false }
quote = { version = "1.0.41", default-features = false }
rand = "0.9.2"
ratatui = "0.29.0"
rayon = "1.11.0"
regex = "1.12.2"
rfd = { version = "0.15.4", default-features = false }
rusqlite = "0.37.0"
rustc-hash = "2.1.1"
rustix = "1.1.2"
serde = "1.0.228"
serde_bytes = "0.11.19"
serde_json = "1.0.145"
shell-words = "1.1.0"
smallvec = "1.15.1"
spel-katalog-batch = { path = "spel-katalog-batch" }
spel-katalog-build = { path = "spel-katalog-build" }
spel-katalog-cli = { path = "spel-katalog-cli" }
spel-katalog-common = { path = "spel-katalog-common" }
spel-katalog-formats = { path = "spel-katalog-formats" }
spel-katalog-games = { path = "spel-katalog-games" }
spel-katalog-gather = { path = "spel-katalog-gather" }
spel-katalog-info = { path = "spel-katalog-info" }
spel-katalog-lua = { path = "spel-katalog-lua" }
spel-katalog-settings = { path = "spel-katalog-settings" }
spel-katalog-sink = { path = "spel-katalog-sink" }
spel-katalog-terminal = { path = "spel-katalog-terminal" }
spel-katalog-tracker = { path = "spel-katalog-tracker" }
spel-katalog-tui = { path = "spel-katalog-tui" }
strsim = "0.11.1"
strum = "0.27.2"
syn = { version = "2.0.108", default-features = false }
tap = "1.0.1"
thiserror = "2.0.17"
tokio = { version = "1.48.0" }
tokio-stream = { version = "0.1.17" }
toml = "0.9.8"
vte = "0.15.0"
whoami = { version = "1.6.1", default-features = false }
yaml-rust2 = "0.10.4"
