[workspace]
members = [
	"spel-katalog",
	"spel-katalog-batch",
	"spel-katalog-build",
	"spel-katalog-cli",
	"spel-katalog-common",
	"spel-katalog-formats",
	"spel-katalog-games",
	"spel-katalog-gather",
	"spel-katalog-info",
	"spel-katalog-lua",
	"spel-katalog-lua-docs",
	"spel-katalog-reflect",
	"spel-katalog-reflect/derive",
	"spel-katalog-reflect/derive-lib",
	"spel-katalog-settings",
	"spel-katalog-sink",
	"spel-katalog-terminal",
	"spel-katalog-test",
]
resolver = "2"
default-members = ["spel-katalog"]

[workspace.package]
edition = "2024"
authors = ["Axel Lord"]
license = "MIT OR Apache-2.0"

[profile.release]
strip = "debuginfo"
opt-level = "z"
lto = "fat"
codegen-units = 1
panic = "unwind"

[profile.dev]
opt-level = 1

[profile.dev.package."*"]
opt-level = 3

[workspace.lints.rust]
missing_docs = "warn"
missing_debug_implementations = "warn"

[workspace.lints.clippy]
allow_attributes = "warn"
case_sensitive_file_extension_comparisons = "warn"
dbg_macro = "warn"
future_not_send = "warn"
missing_const_for_fn = "warn"
missing_docs_in_private_items = "warn"
missing_errors_doc = "warn"
missing_panics_doc = "warn"
missing_safety_doc = "warn"
print_stderr = "warn"
print_stdout = "warn"
std_instead_of_core = "warn"
str_to_string = "warn"
todo = "warn"
unused_result_ok = "warn"

[workspace.dependencies]
bytes = "1.11.0"
clap = "4.5.53"
clap_complete = "4.5.61"
color-eyre = "0.6.5"
convert_case = "0.9.0"
derive-new = "0.7.0"
derive_more = "2.1.0"
either = "1.15.0"
env_logger = "0.11.8"
flume = "0.11.1"
futures = "0.3.31"
iced_core = "0.13.2"
iced_futures = { version = "0.13.2", features = ["smol"] }
iced_highlighter = "0.13.0"
iced_renderer = { version = "0.13.0", features = ["wgpu"] }
iced_runtime = "0.13.2"
iced_widget = { version = "0.13.4", features = ["image", "lazy"] }
iced_winit = { version = "0.13.0", default-features = false, features = ["program", "wayland", "wayland-csd-adwaita", "wayland-dlopen"] }
image = { version = "0.25.9", default-features = false, features = ["rayon", "png", "jpeg"] }
indexmap = "2.12.1"
itertools = "0.14.0"
log = "0.4.29"
memchr = "2.7.6"
mlua = { version = "0.11.5", features = ["luau", "luau-jit", "vendored", "macros"] }
nalgebra = "0.34.1"
once_cell = "1.21.3"
open = "5.3.3"
parking_lot = "0.12.5"
paste = "1.0.15"
pretty_assertions = "1.4.1"
prettyplease = "0.2.37"
proc-macro2 = { version = "1.0.103", default-features = false }
quote = { version = "1.0.42", default-features = false }
rand = "0.9.2"
rayon = "1.11.0"
regex = "1.12.2"
rfd = { version = "0.15.4", default-features = false, features = ["gtk3"]}
rusqlite = "0.37.0"
rustc-hash = "2.1.1"
rustix = "1.1.2"
serde = "1.0.228"
serde_bytes = "0.11.19"
serde_json = "1.0.145"
shell-words = "1.1.1"
smallvec = "1.15.1"
smol = "2.0.2"
spel-katalog-batch = { path = "spel-katalog-batch" }
spel-katalog-build = { path = "spel-katalog-build" }
spel-katalog-cli = { path = "spel-katalog-cli" }
spel-katalog-common = { path = "spel-katalog-common" }
spel-katalog-formats = { path = "spel-katalog-formats" }
spel-katalog-games = { path = "spel-katalog-games" }
spel-katalog-gather = { path = "spel-katalog-gather" }
spel-katalog-info = { path = "spel-katalog-info" }
spel-katalog-lua = { path = "spel-katalog-lua" }
spel-katalog-lua-docs = { path = "spel-katalog-lua-docs" }
spel-katalog-reflect = { path = "spel-katalog-reflect" }
spel-katalog-reflect-derive = { path = "spel-katalog-reflect/derive" }
spel-katalog-reflect-derive-lib = { path = "spel-katalog-reflect/derive-lib" }
spel-katalog-settings = { path = "spel-katalog-settings" }
spel-katalog-sink = { path = "spel-katalog-sink" }
spel-katalog-terminal = { path = "spel-katalog-terminal" }
strsim = "0.11.1"
strum = "0.27.2"
syn = { version = "2.0.111", default-features = false, features = ["full", "parsing", "printing"] }
tap = "1.0.1"
thiserror = "2.0.17"
toml = "0.9.8"
vte = "0.15.0"
whoami = { version = "1.6.1", default-features = false }
yaml-rust2 = "0.10.4"
