[package]
name = "spel-katalog-batch"
version = "0.1.0"
edition = "2024"
authors = ["Axel Lord"]
license = "MIT OR Apache-2.0"

[lints]
workspace = true

[dependencies]
derive_more = { workspace = true, features = ["display"] }
iced_highlighter.workspace = true
iced_core.workspace = true
iced_runtime.workspace = true
iced_widget.workspace = true
iced_renderer.workspace = true
log.workspace = true
mlua = { workspace = true, features = ["serde", "luau", "luau-jit", "vendored"]}
rfd = { workspace = true, features = ["xdg-portal","tokio"] }
rustc-hash.workspace = true
serde = { workspace = true, features = ["derive"] }
serde_json.workspace = true
smol.workspace = true
spel-katalog-common.workspace = true
spel-katalog-lua.workspace = true
spel-katalog-settings.workspace = true
spel-katalog-sink.workspace = true
strum = { workspace = true, features = ["derive"] }
tap.workspace = true
tokio = { workspace = true, features = ["process"] }
