[package]
name = "spel-katalog-batch"
version = "0.1.0"
edition.workspace = true
authors.workspace = true
license.workspace = true

[lints]
workspace = true

[dependencies]
derive_more = { workspace = true, features = ["display"] }
iced_core.workspace = true
iced_highlighter.workspace = true
iced_renderer.workspace = true
iced_runtime.workspace = true
iced_widget.workspace = true
log.workspace = true
mlua.workspace = true
rfd.workspace = true
rustc-hash.workspace = true
serde = { workspace = true, features = ["derive"] }
serde_json.workspace = true
smol.workspace = true
spel-katalog-common.workspace = true
spel-katalog-lua.workspace = true
spel-katalog-settings.workspace = true
spel-katalog-sink.workspace = true
strum = { workspace = true, features = ["derive"] }
tap.workspace = true
