[package]
name = "spel-katalog-build"
version = "0.1.0"
edition = "2024"
authors = ["Axel Lord"]
license = "MIT OR Apache-2.0"

[dependencies]
convert_case.workspace = true
indexmap = { workspace = true, features = ["serde"] }
prettyplease.workspace = true
proc-macro2 = { workspace = true }
quote.workspace = true
regex.workspace = true
rustc-hash.workspace = true
serde = { workspace = true, features = ["derive"] }
syn = { workspace = true, features = ["full"] }
toml.workspace = true

[lints]
workspace = true
