[package]
name = "spel-katalog-build"
version = "0.1.0"
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
convert_case.workspace = true
indexmap = { workspace = true, features = ["serde"] }
prettyplease.workspace = true
proc-macro2 = { workspace = true }
quote.workspace = true
regex.workspace = true
rustc-hash.workspace = true
serde = { workspace = true, features = ["derive"] }
syn.workspace = true
toml.workspace = true

[lints]
workspace = true
