[package]
name = "spel-katalog-cli"
version = "0.1.0"
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
clap = { workspace = true, features = ["derive"] }
clap_complete.workspace = true
log.workspace = true
spel-katalog-settings.workspace = true
tap.workspace = true
thiserror.workspace = true
toml.workspace = true

[lints]
workspace = true
