[package]
name = "spel-katalog-common"
version = "0.1.0"
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
derive_more = { workspace = true, features = ["is_variant", "deref", "from", "into"] }
flume.workspace = true
iced_core.workspace = true
iced_widget.workspace = true
log.workspace = true

[lints]
workspace = true
