[package]
name = "spel-katalog-db"
version = "0.1.0"
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
dashmap = "6.1.0"
derive_more = { workspace = true, features = ["from"] }
flume.workspace = true
log.workspace = true
rusqlite.workspace = true
rustc-hash.workspace = true
thiserror.workspace = true

[lints]
workspace = true
