[package]
name = "spel-katalog-formats"
version = "0.1.0"
edition = "2024"
authors = ["Axel Lord"]
license = "MIT OR Apache-2.0"

[dependencies]
bytes = { workspace = true, features = ["serde"] }
derive_more = { workspace = true, features = ["is_variant", "display"] }
indexmap.workspace = true
rustc-hash.workspace = true
serde = { workspace = true, features = ["derive"] }
serde_bytes.workspace = true

[lints]
workspace = true
