[package]
name = "spel-katalog-formats"
version = "0.1.0"
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
bytes = { workspace = true, features = ["serde"] }
derive_more = { workspace = true, features = ["is_variant", "display"] }
indexmap.workspace = true
rustc-hash.workspace = true
serde = { workspace = true, features = ["derive"] }
serde_bytes.workspace = true

[lints]
workspace = true
