[package]
name = "spel-katalog-games"
version = "0.1.0"
edition = "2024"
authors = ["Axel Lord"]
license = "MIT OR Apache-2.0"

[lints]
workspace = true

[dependencies]
derive_more = { workspace = true, features = ["is_variant", "display"] }
iced = { workspace = true, features = ["tokio", "lazy", "image", "advanced"] }
image.workspace = true
itertools.workspace = true
log.workspace = true
rayon.workspace = true
regex.workspace = true
rusqlite.workspace = true
rustc-hash.workspace = true
shell-words.workspace = true
spel-katalog-common.workspace = true
spel-katalog-settings.workspace = true
strsim.workspace = true
tap.workspace = true
thiserror.workspace = true
tokio.workspace = true
