[package]
name = "spel-katalog-gather"
version = "0.1.0"
edition = "2024"
authors = ["Axel Lord"]
license = "MIT OR Apache-2.0"

[dependencies]
spel-katalog-formats.workspace = true
rusqlite.workspace = true
thiserror.workspace = true
rustc-hash.workspace = true
log.workspace = true

[lints]
workspace = true
