[package]
name = "spel-katalog-info"
version = "0.1.0"
edition = "2024"
authors = ["Axel Lord"]
license = "MIT OR Apache-2.0"

[dependencies]
derive_more = { workspace = true, features = ["from", "is_variant"] }
iced.workspace = true
image.workspace = true
log.workspace = true
rfd = { workspace = true, features = ["xdg-portal","tokio"] }
spel-katalog-common.workspace = true
spel-katalog-formats.workspace = true
spel-katalog-gather.workspace = true
spel-katalog-settings.workspace = true
spel-katalog-tracker.workspace = true
tap.workspace = true
thiserror.workspace = true
tokio = { workspace = true, features = ["fs"] }
serde = { workspace = true, features = ["derive"] }
tokio-stream = { workspace = true, features = ["time"] }
rayon.workspace = true
parking_lot.workspace = true
yaml-rust2 = { workspace = true }
toml.workspace = true
rustc-hash.workspace = true
open.workspace = true
iced_highlighter.workspace = true

[lints]
workspace = true
