[package]
name = "spel-katalog-info"
version = "0.1.0"
edition = "2024"
authors = ["Axel Lord"]
license = "MIT OR Apache-2.0"

[dependencies]
derive_more = { workspace = true, features = ["from", "is_variant"] }
iced_core.workspace = true
iced_highlighter.workspace = true
iced_renderer.workspace = true
iced_runtime.workspace = true
iced_widget.workspace = true
image.workspace = true
log.workspace = true
open.workspace = true
parking_lot.workspace = true
rayon.workspace = true
rfd.workspace = true
rustc-hash.workspace = true
serde = { workspace = true, features = ["derive"] }
smol.workspace = true
spel-katalog-common.workspace = true
spel-katalog-formats.workspace = true
spel-katalog-gather.workspace = true
spel-katalog-settings.workspace = true
spel-katalog-widget.workspace = true
tap.workspace = true
thiserror.workspace = true
toml.workspace = true
yaml-rust2 = { workspace = true }

[lints]
workspace = true
