[package]
name = "spel-katalog-installer"
version = "0.1.0"
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
iced_aw = { workspace = true, features = ["context_menu", "drop_down"] }
iced_core.workspace = true
iced_highlighter.workspace = true
iced_runtime.workspace = true
iced_widget.workspace = true
derive_more = { workspace = true, features = ["into", "from"] }
log.workspace = true
rfd.workspace = true
smol.workspace = true
spel-katalog-common.workspace = true
spel-katalog-formats.workspace = true
spel-katalog-native.workspace = true
spel-katalog-settings.workspace = true
spel-katalog-widget.workspace = true
tap.workspace = true
toml.workspace = true
uuid.workspace = true

[lints]
workspace = true
