[package]
name = "spel-katalog-parse"
version = "0.1.0"
edition = "2024"

[dependencies]
nom = { workspace = true }
thiserror.workspace = true
smallvec = { workspace = true, features = ["union", "const_generics", "const_new", "serde", "write"] }
derive_more = { workspace = true, features = ["is_variant"] }
nom_locate = { workspace = true }

[lints]
workspace = true

[[example]]
name = "cmdline-format"
path = "examples/cmdline-format.rs"
