[package]
name = "spel-katalog-run"
version = "0.1.0"
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
spel-katalog-formats.workspace = true
spel-katalog-settings.workspace = true
smol.workspace = true
rustc-hash.workspace = true
log.workspace = true
users.workspace = true
shell-words.workspace = true

[lints]
workspace = true
