[package]
name = "spel-katalog-run"
version = "0.1.0"
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
log.workspace = true
rustc-hash.workspace = true
shell-words.workspace = true
smol.workspace = true
derive_more = { workspace = true, features = [ "is_variant" ] }
spel-katalog-formats.workspace = true
spel-katalog-settings.workspace = true
spel-katalog-sink.workspace = true
users.workspace = true

[lints]
workspace = true
