[package]
name = "spel-katalog-run"
version = "0.1.0"
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
color-eyre.workspace = true
derive_more = { workspace = true, features = [ "is_variant" ] }
itertools.workspace = true
log.workspace = true
rustc-hash.workspace = true
shell-words.workspace = true
smol.workspace = true
spel-katalog-formats.workspace = true
spel-katalog-settings.workspace = true
spel-katalog-sink.workspace = true
tap.workspace = true
users.workspace = true

[lints]
workspace = true
