[package]
name = "spel-katalog-script"
version = "0.1.0"
edition = "2024"

[dependencies]
spel-katalog-parse.workspace = true
tap.workspace = true
itertools.workspace = true
log.workspace = true
toml.workspace = true
serde = { workspace = true, features = ["derive"] }
rustc-hash.workspace = true
indexmap = { workspace = true, features = ["serde"] }
tokio = { workspace = true, features = ["parking_lot", "process", "macros", "time"] }
thiserror.workspace = true
derive_more = { workspace = true, features = ["into", "from", "is_variant"] }
serde_json.workspace = true
bon.workspace = true
shell-words.workspace = true
paste.workspace = true

[dev-dependencies]
pretty_assertions.workspace = true
color-eyre.workspace = true

[lints]
workspace = true
