[package]
name = "spel-katalog-script"
version = "0.1.0"
edition = "2024"
authors = ["Axel Lord"]
license = "MIT OR Apache-2.0"

[dependencies]
tap.workspace = true
itertools.workspace = true
log.workspace = true
toml.workspace = true
serde = { workspace = true, features = ["derive"] }
rustc-hash.workspace = true
indexmap = { workspace = true, features = ["serde"] }
tokio = { workspace = true, features = ["parking_lot", "process", "time", "fs"] }
thiserror.workspace = true
derive_more = { workspace = true, features = ["into", "from", "is_variant", "deref", "deref_mut"] }
serde_json.workspace = true
bon.workspace = true
shell-words.workspace = true
paste.workspace = true
futures.workspace = true
regex.workspace = true

[dev-dependencies]
pretty_assertions.workspace = true
color-eyre.workspace = true
tokio = { workspace = true, features = ["rt", "macros"] }

[lints]
workspace = true
