[package]
name = "spel-katalog-settings"
version = "0.1.0"
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
clap = { workspace = true, features = ["derive"] }
derive_more = { workspace = true, features = ["from", "is_variant", "display", "into_iterator", "as_ref", "deref", "into", "deref_mut"] }
iced_core.workspace = true
iced_renderer.workspace = true
iced_runtime.workspace = true
iced_widget.workspace = true
log.workspace = true
serde = { workspace = true, features = ["derive"] }
smol.workspace = true
spel-katalog-common.workspace = true
tap.workspace = true
toml.workspace = true
whoami = { workspace = true }

[build-dependencies]
spel-katalog-build.workspace = true

[lints]
workspace = true
