[package]
name = "spel-katalog-terminal"
version = "0.1.0"
edition = "2024"
authors = ["Axel Lord"]
license = "MIT OR Apache-2.0"

[dependencies]
iced.workspace = true
log.workspace = true
memchr.workspace = true
spel-katalog-common.workspace = true
spel-katalog-sink.workspace = true
tokio = { workspace = true, features = ["sync"]}
tokio-stream.workspace = true
vte.workspace = true

[lints]
workspace = true
