[package]
name = "spel-katalog-terminal"
version = "0.1.0"
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
flume.workspace = true
iced_core.workspace = true
iced_renderer.workspace = true
iced_runtime.workspace = true
iced_widget.workspace = true
log.workspace = true
memchr.workspace = true
smol.workspace = true
spel-katalog-common.workspace = true
spel-katalog-sink.workspace = true
vte.workspace = true

[lints]
workspace = true
