[package]
name = "spel-katalog-test"
version = "0.1.0"
edition = "2024"
authors = ["Axel Lord"]
license = "MIT OR Apache-2.0"

[[bin]]
name = "match-num"
path = "src/match_num.rs"

[dependencies]
clap = { workspace = true, features = ["derive"] }
color-eyre.workspace = true
env_logger.workspace = true
iced_core.workspace = true
iced_futures.workspace = true
iced_renderer.workspace = true
iced_runtime.workspace = true
iced_widget.workspace = true
iced_winit.workspace = true
log.workspace = true
rand.workspace = true
smol.workspace = true
tap.workspace = true

[dev-dependencies]
pretty_assertions.workspace =  true

[lints]
workspace = true
