[package]
name = "spel-katalog-widget"
version = "0.1.0"
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
iced_core.workspace = true
iced_widget.workspace = true
derive_more = { workspace = true, features = ["from", "into", "deref", "deref_mut"]}
tap.workspace = true

[lints]
workspace = true
