[package]
name = "spel-katalog"
version = "0.1.0"
edition = "2024"

[dependencies]
async-stream.workspace = true
bon.workspace = true
clap = { workspace = true, features = ["derive"] }
color-eyre.workspace = true
derive_more = { workspace = true, features = ["from", "is_variant", "display", "into_iterator", "as_ref", "deref", "into", "deref_mut"] }
display.workspace = true
env_logger.workspace = true
iced = { workspace = true, features = ["tokio", "lazy", "image", "advanced"] }
image.workspace = true
itertools.workspace = true
log = { workspace = true, features = ["max_level_debug", "release_max_level_info"] }
parking_lot.workspace = true
paste.workspace = true
rayon.workspace = true
regex.workspace = true
rfd = { workspace = true, features = ["xdg-portal", "tokio"] }
rustc-hash.workspace = true
serde = { workspace = true, features = ["derive"] }
serde_yml.workspace = true
shell-words.workspace = true
sqlite.workspace = true
strsim.workspace = true
strum = { workspace = true, features = ["derive"] }
tap.workspace = true
thiserror.workspace = true
tokio = { workspace = true, features = ["full"] }
tokio-stream = { workspace = true, features = ["full"] }
toml.workspace = true
xdg.workspace = true

[build-dependencies]
convert_case.workspace = true
prettyplease.workspace = true
quote.workspace = true
regex.workspace = true
rustc-hash.workspace = true
serde = { workspace = true, features = ["derive"] }
syn = { workspace = true, features = ["full"] }
toml.workspace = true

[lints.rust]
missing_debug_implementations = "warn"

[lints.clippy]
allow_attributes = "warn"
missing_panics_doc = "warn"
missing_safety_doc = "warn"
future_not_send = "warn"
